@@ -1,3 +1,4 @@
+2/9/12 fix: concentration meter continues to read a value after dropper is turned off
 # 0.00.09 (61151) Feb 9, 2012
 2/9/12 change request: make concentration meter cable curvy (ala Bending Light)
 2/9/12 change request: move initial location of concentration probe below left of body (outside beaker)
